[package]
name = "refinery"
version = "0.2.0"
authors = ["Katharina Fey <kookie@spacekookie.de>", "João Oliveira <hello@jxs.pt>"]
license = "MIT"
description = "Powerful SQL migration toolkit for Rust"
readme = "README.md"
documentation = "https://docs.rs/refinery/"
repository = "https://github.com/rust-db/refinery"
keywords = ["database", "sql", "migrations", "orm"]
categories = ["database"]
edition = "2018"

[dependencies]
refinery-core= { version = "0.2.0", path = "../refinery_core" }
refinery-macros= { version = "0.2.0", path = "../refinery_macros" }
